# luwak

./: CMakeLists.txt  ProjectHome.md
data/: one.txt
src/: Luwak.pro  contour.cpp  contour.h  fourier.cpp  fourier.h  fullimg.ui  imgconvert.cpp  iqgraphicsscene.cpp  iqgraphicsscene.h  mainwindow.cpp  mainwindow.h  papillon.cpp  wqgraphicsscene.cpp
trunk/: CMakeLists.txt
trunk/src/: Luwak.pro  contour.cpp  contour.h  fourier.cpp  fullimg.cpp  fullimg.h  imgconvert.h  iqgraphicsscene.cpp  iqgraphicsscene.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  papillon.cpp  papillon.h  wqgraphicsscene.cpp  wqgraphicsscene.h
